syntax = "proto3";

package config;

option go_package="config";

import "google/protobuf/descriptor.proto";

message Params {
    string apid_base = 1;
    string org_name  = 2;
    string env_name  = 3;
}
