// Copyright 2018 Google LLC
//
// Licensed under the Apache License, Version 2.0 (the "License");
// you may not use this file except in compliance with the License.
// You may obtain a copy of the License at
//
//      http://www.apache.org/licenses/LICENSE-2.0
//
// Unless required by applicable law or agreed to in writing, software
// distributed under the License is distributed on an "AS IS" BASIS,
// WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
// See the License for the specific language governing permissions and
// limitations under the License.

syntax = "proto3";

package analytics;

import "mixer/adapter/model/v1beta1/type.proto";
import "mixer/adapter/model/v1beta1/extensions.proto";

option (istio.mixer.adapter.model.v1beta1.template_variety) = TEMPLATE_VARIETY_REPORT;

message Template {
    string api_proxy = 1;
    int64 response_status_code = 2;
    istio.mixer.adapter.model.v1beta1.IPAddress client_ip = 3;
    string request_verb = 4;
    string request_uri = 5;
    string request_path = 6;
    string useragent = 7;
    istio.mixer.adapter.model.v1beta1.TimeStamp client_received_start_timestamp = 8;
    istio.mixer.adapter.model.v1beta1.TimeStamp client_received_end_timestamp = 9;
    istio.mixer.adapter.model.v1beta1.TimeStamp client_sent_start_timestamp = 10;
    istio.mixer.adapter.model.v1beta1.TimeStamp client_sent_end_timestamp = 11;
    istio.mixer.adapter.model.v1beta1.TimeStamp target_sent_start_timestamp = 12;
    istio.mixer.adapter.model.v1beta1.TimeStamp target_sent_end_timestamp = 13;
    istio.mixer.adapter.model.v1beta1.TimeStamp target_received_start_timestamp = 14;
    istio.mixer.adapter.model.v1beta1.TimeStamp target_received_end_timestamp = 15;

    // auth: if jwt is available (takes precedence over api_key)
    map<string, string> api_claims = 200;

    // auth: if jwt isn't available and apikey is
    string api_key = 201;
}

// these get added in adapter from auth...
// DeveloperEmail               string `json:"developer_email,omitempty"`
// DeveloperApp                 string `json:"developer_app,omitempty"`
// AccessToken                  string `json:"access_token,omitempty"`
// ClientID                     string `json:"client_id,omitempty"`
// APIProduct                   string `json:"api_product,omitempty"`

// not used...
// APIProxyRevision             int    `json:"apiproxy_revision"`
